# NDVDetector

./: .gitignore  CMakeLists.txt  readme.md
src/: CImgWrapper.h  CMakeLists.txt  CodecTestWorker.cpp  CodecTestWorker.h  ConfigManager.cpp  ConfigManager.h  CustomTestModel.cpp  CustomTestModel.h  DatabaseManager.cpp  DatabaseManager.h  DecodingFrames.cpp  DecodingFrames.h  DuplicateDetector.cpp  DuplicateDetector.h  FFProbeExtractor.cpp  FFProbeExtractor.h  FastVideoProcessor.cpp  FastVideoProcessor.h  FileSystemSearch.cpp  FileSystemSearch.h  GLContext.cpp  GLContext.h  GPUVendor.cpp  GPUVendor.h  GroupRowDelegate.cpp  GroupRowDelegate.h  HardlinkWorker.cpp  HardlinkWorker.h  Hash.cpp  Hash.h  IVideoProcessor.h  LumaExtractor.cpp  LumaExtractor.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mean32PipelineGL.cpp  Mean32PipelineGL.h  PHashCPU.cpp  PHashCPU.h  (+26 more)
